 --  search() now uses the DbrefToBuffer() calls to ensure that returned
     dbrefs aren't truncated in the middle of the number.
 --  Workaround nonstandard continuation-line behavior of gcc 2.96 on
     Mandrake 8.0. Thanks Marlek.
 --  On Win32, the logs now use CRLF instead of NL.
 --  Clean build on gcc 3.0. Thanks Morgan.
 --  SIGSEGV bug in revwords(). Bug from Treyvan.
 --  Code review and changes to object.cpp. Thanks Jake.
 --  lparent() and lcon() now use the DbrefToBuffer() calls to ensure that
     returned dbrefs aren't truncated in the middle of the number.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 --  The parser speed has been substantially increased: TinyExec() and 
     parse_to()
 --  Main networking loop is brief, to the point, and fast.
 --  Combined all the queues, do_second, dispatch, cache_tick, do_top, etc.
     and the way process_output and process_commands were scheduled into a 
     single unified mini-task design. Everything is now scheduled, or it 
     doesn't run.  @kick, @timewarp, @enable/disable queuing all still 
     work. The server will sleep until there is work to do or IO to 
     perform, otherwise, it will sleep for an arbitrarily long time (which 
     ight now is 5 minutes). The WinNT shovechars loop is now 12 lines long 
     (not counting blanks, braces, or comments). Alarm() has been removed 
     from the server. It caused the main networking loop to run once a 
     second regardless of whether there was anything on the queue to run or
     whether the status of any connections changes.
 --  Commands that are waiting on quota are now scheduled more fluidly.
 --  The interface for safe_copy_chr() and safe_copy_str() is now different 
     which was done to support a speed increase.
 --  Bread-and-butter dumping functions: putref, getref, putstring, and 
     getstring_noalloc have all been highly optimized for speed.
 --  Translate() and all handling of ANSI functions has been optimized in 